fix minor layout issues

--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -15,7 +15,8 @@ html {
 /* Remove default margin in favour of better control in authored CSS */
 body, h1, h2, h3, h4, p,
 figure, blockquote, dl, dd {
-  margin-block-end: 0;
+  /* margin-block-start: 0; */
+  /* margin-block-end: 0; */
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -28,8 +29,8 @@ ol[role='list'] {
 body {
   min-height: 100vh;
   line-height: 1.5;
-  margin: 0;
-  padding: 0;
+  margin: 0; /* CUSTOM */
+  padding: 0; /* CUSTOM */
 }
 
 /* Set shorter line heights on headings and interactive elements */
